# civil_ihu_pyappz

./: .gitignore  CLAUDE.md  Internship_Booklet.docx  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/: copilot-instructions.md
civil_ihu_pyappz/: Perigrammata-template-gr.docx  perigrammata.py  Εξάμηνο-template-gr.docx  Περιγράμματα-gr.ipynb
civil_ihu_pyappz/scripts/: praktiki_vivliaraki.py
files/: Learning_Objectives_Bloom_rev.docx  perigrammata-template-eng (version 1).docx  perigrammata-template-eng.docx
files/exams/: exams olderr versions.7z  exams-2025-09.xlsm  exams-2026-01-draft1.xlsm  exams-2026-01-draft2.xlsm  exams-2026-01-draft3.xlsm  exams-2026-01.xlsm  exams-2026-06 xxx.xlsm  exams-2026-06-draft1.xlsm  exams-2026-06-draft2.xlsm  exams-2026-06-draft3.xlsm  exams-2026-06.xlsm  exams-2026-09.xlsm  ~$exams-2026-01.xlsm  Προγραμμα_Εξετασεων_Εβδομαδιαιο_20251219.docx  Προγραμμα_Εξετασεων_Εβδομαδιαιο_20251220.docx  Πρόγραμμα_Εξετάσεων_ΔΙΠΑΕ_Εαρινό Εξάμηνο 2025-2026 (με επιτηρητές).docx  Πρόγραμμα_Εξετάσεων_ΤΕΙ_Εαρινό Εξάμηνο 2025-2026 (με επιτηρητές).docx  Πρόγραμμα_Εξετάσεων_ΤΕΙ_Εαρινό Εξάμηνο 2025-2026.docx  Πρόγραμμα_Εξετάσεων_ΤΕΙ_Επαναληπτική Σεπτεμβρίου_2025-2026.docx
files/mitroa/: professors_export_202412111752.feather  professors_export_202412111752.parquet  professors_export_202412111752.xlsx  professors_export_202510141042.feather  professors_export_202510141042.parquet  professors_export_202510141042.xlsx  ~$Μητρώο Εξωτερικό 2024-12 ver4.xlsx  Μητρώο Εξωτερικό 2024-12 ver4.xlsx  Μητρώο Εξωτερικό 2025-10 ver3.xlsx
files/timetables/: 2025-2026 - v00.xlsm  2025-2026 - v01.xlsm  (+17 more)
jupyter/: 09_ΔΟΜ039_updated.docx  antikeimena.xlsx  build_all_courses.py  eklektores.xlsx  merged.docx  merged_document_2025gr.docx  mitroa.ipynb  test.docx  Περιγράμματα Μαθημάτων_2025gr.docx  Περιγράμματα-gr-Copy1 2025 gr.ipynb  Περιγράμματα-gr-Copy1.ipynb  Περιγράμματα-gr.ipynb
plans/: add-microsoft-auth.md
streamlit/: app.py  auth.py  home.py
tests/: tempCodeRunnerFile.py  test.py
(+237 files in other folders)
