[tool.poetry]
name = "civil-ihu-pyappz"
version = "0.1.0"
description = ""
authors = ["panagop <gpanagop@gmail.com>"]
readme = "README.md"
packages = [{include = "civil_ihu_pyappz"}]

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.2.0"
jupyter = "^1.1.0"
jupyterlab = "^4.2.0"
openpyxl = "^3.1.2"
lxml = "^5.3.0"
seaborn = "^0.13.1"
tables = "^3.10.0"
streamlit = "^1.38.0"
pandas = "^2.2.1"
docxtpl = "^0.18.0"
docxcompose = "^1.4.0"
python-docx = "^1.1.1"
docx2pdf = "^0.1.8"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
