[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "civil-ihu-pyappz"
version = "0.2.0"
description = "A Streamlit app for the civil engineering department at IHU"
authors = [{ name = "panagop", email = "gpanagop@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit",
    "jupyter",
    "openpyxl>=3.1.5",
    "lxml>=6.0.0",
    "seaborn>=0.13.2",
    "docxtpl>=0.20.0",
    "docxcompose>=1.4.0",
    "python-docx>=1.2.0",
    "docx2pdf>=0.1.8",
    "tables>=3.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]

[tool.hatch.build.targets.wheel]
packages = ["myproject"]
